# shopsense-agent

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/data/: products.json
backend/src/shopsense/: agent.py  config.py  ingest.py  main.py  models.py  store.py
frontend/: components.json  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentPanel.tsx  ChatMessage.tsx  ChatWidget.tsx  ProductCard.tsx  ProductScroll.tsx  SearchPanel.tsx  TypingIndicator.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  scroll-area.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
