[project]
name = "shopsense"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.54.0",
    "qdrant-client>=1.12.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shopsense"]

[tool.hatch.build.targets.sdist]
include = ["src/shopsense"]

[tool.uv]
package = true

[tool.uv.sources]
